--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "بوت استعلام أدوية سوداني",
   "main": "index.js",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "whatsapp-web.js": "^1.20.0",
     "qrcode-terminal": "^0.12.0",
-    "firebase-admin": "^11.11.0",
+    "firebase-admin": "^11.0.0",
     "express": "^4.18.2"
   }
 }
