--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
     "qrcode-terminal": "^0.12.0",
     "firebase-admin": "^11.0.0",
     "express": "^4.18.2"
+    "node-telegram-bot-api": "^0.60.0",
   }
 }
