--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "whatsapp-web.js": "^1.20.0",
     "qrcode-terminal": "^0.12.0",
     "firebase-admin": "^11.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
     "node-telegram-bot-api": "^0.60.0",
   }
 }
