--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "firebase-admin": "^11.0.0",
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.63.0",
-    "body-parser": "^1.20.2" <--- هذا هو السطر الجديد المطلوب
+    "body-parser": "^1.20.2"
   }
 }
