--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "22.x"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "firebase-admin": "^11.0.0",
