--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-telegram-bot-api": "^0.63.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "ws": "^8.14.0"
   }
 }
