--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "axios": "^1.7.2",
-    "ws": "^8.14.0"
+    "ws": "^8.14.0",
+     "dotenv": "^16.1.4" 
   }
 }
