--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "axios": "^1.7.2",
     "ws": "^8.14.0",
-     "dotenv": "^16.1.4" 
+     "dotenv": "^16.1.4",
+    "telegraf": "^4.18.0"
   }
 }
