--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   "dependencies": {
     "firebase-admin": "^11.0.0",
     "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.63.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "axios": "^1.7.2",
     "ws": "^8.14.0",
-     "dotenv": "^16.1.4",
-    "node-telegram-bot-api": "^0.56.0"
+    "dotenv": "^16.1.4",
+    "telegraf": "^4.21.2"
   }
-  }
+}
