--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "axios": "^1.7.2",
     "ws": "^8.14.0",
     "dotenv": "^16.1.4",
-    "telegraf": "^4.17.0"
+    "node-telegram-bot-api": "^0.63.0"
   }
 }
